caombios agregamos un nombre propio

--- a/index3.html
+++ b/index3.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     <p>
-        hola mi<strong> name osea </strong> nombre es santos y gobierno como canto
-        quiero juegar al fornais
+        hola amigos del yutu mi nombre es David y estoy volando aprendiendo
+
     </p>
 </body>
 </html>
